--- a/index.html
+++ b/index.html
@@ -648,6 +648,7 @@
                                             <label for="timeline_section_year-2024" tabindex="0">2024</label>
                                             <div class="flex align-items-center" style="column-gap: 1rem; justify-content: start;">
                                             <svg><use xlink:href="images/icons.svg#plus"></use></svg>
+                                            <svg><use xlink:href="images/icons.svg#minus"></use></svg>
                                             <span>2024</span>
                                         </div>
                                         </div>
@@ -806,6 +807,7 @@
                                             <label for="timeline_section_year-2018" tabindex="0">2018</label>
                                             <div class="flex align-items-center" style="column-gap: 1rem; justify-content: start;">
                                             <svg><use xlink:href="images/icons.svg#plus"></use></svg>
+                                            <svg><use xlink:href="images/icons.svg#minus"></use></svg>
                                             <span>2018</span>
                                         </div>
                                         </div>
@@ -816,7 +818,7 @@
                                             <hr>
                                             <hr>
                                         </div>
-                                        <div id="modal_archive-content_section-content">
+                                        <div id="modal_archive-content_section-content" style="min-height: 200vh;">
                                             <h1 class="font-bold text-lg" style="margin-bottom: 2.5rem">
                                                 Project #22
                                             </h1>
